fix: mobile nav not showing, items in selects not showing

--- a/src/app/_shared/styles/material-override/mat-sidenav.css
+++ b/src/app/_shared/styles/material-override/mat-sidenav.css
@@ -9,3 +9,7 @@
 .mat-mdc-list-item, .mat-mdc-list-option {
     width: inherit !important;
 }
+
+mat-option .mdc-list-item__primary-text{
+    color: var(--primary-900) !important;
+}
